--- a/css/style.css
+++ b/css/style.css
@@ -26,16 +26,18 @@ body {
     background-color: #dbd5c9;
     padding: 30px;
     display: flex;
+  
 }
 
 .tela {
- 
+   
     width: 500px;
     height: 320px;
     background: linear-gradient(to right, #e8e8e8, #c1c1c1);
     border: 2px solid #555;
     display: flex;
     flex-direction: column;
+    border: 3px solid red;
     
 }
 
@@ -181,11 +183,69 @@ body {
     align-items: center;
 }
 
-@media(max-width: 450px){
-    .tela {
+@media(max-width: 480px){
+    .urna {
+        background-color: #dbd5c9;
         display: flex;
-        width: max-content;
-        
-        
+        width: 100%;
+        height: 100%;
     }
+
+    .tela {   
+        width: 380px;
+        height: 250px;
+        background: linear-gradient(to right, #e8e8e8, #c1c1c1);
+        border: 1px solid #555;
+        display: flex;
+        flex-direction: column;
+              
+    }
+
+    .teclado {
+        background-color: #403a3a;
+        margin-left: 30px;
+            width: 210px;
+        height: 250px;
+    }
+
+    .teclado--linha {
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        height: 50px;
+    }
+
+    .teclado--botao {
+        width: 50px;
+        height: 30px;      
+        font-size: 20px;  
+        margin: 5px;   
+ 
+    }
+
+    .botao--branco {
+        font-size: 10px;
+    }
+
+    .botao--corrige {
+        font-size: 10px;
+    }
+    
+    .botao--confirma {
+        font-size: 13px;
+        width: 80px;
+        height: 40px;
+        border: 2px solid blue;
+    }
+
+    .d-1-2 {
+        height: 30px;
+        font-size: 15px;
+    }
+
+    .d-1-3 {
+        height: 50px;
+        width: 190px;
+    }
+
 }
